--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
     --dark-blue-bgd: #404bbf;
     --simple-white-cl: #F4F4FD;
     --border-white-cl: #e7e9fc;
+    --lights-late-cl: #8E8F99;
   
 }
 
@@ -139,11 +140,19 @@ img {
 
 
 .hero {
+    max-width: 1440px;
+    margin: 0 auto;
     background-color: var(--dark-title-cl);
     padding-top: 188px;
     padding-bottom: 188px;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/technologies/office.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
-
+.hero-container {
+    
+}
 
 .hero-title {
     font-style: normal;
@@ -305,6 +314,35 @@ img {
 }
 .card-name {
     padding: 32px 16px;
+}
+
+/* Clients*/
+
+
+.clients-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
+.clients-item {
+}
+
+.clients-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    border: 1px solid var(--lights-late-cl);
+    width: 168px;
+    height: 88px;
+}
+.clients-link:hover {
+    border-color: var(--dark-blue-bgd);
+}
+
+.clients-link:hover .clients-icon {
+    fill: var(--dark-blue-bgd)
 }
 
 /* Footer section */
