--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@
     --simple-white-cl: #F4F4FD;
     --border-white-cl: #e7e9fc;
     --lights-late-cl: #8E8F99;
+    --navyblue-modal: rgba(46, 47, 66, 0.40);
+    --dairy: #FCFCFC;
   
 }
 
@@ -100,14 +102,29 @@ img {
     
 }
 .header-link {
+    position: relative;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--dark-title-cl);
     padding: 24px 0;
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.header-link.active::after {
+    content: "";
+    position: absolute;
+    bottom: -4px;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 4px;
+    background-color: var(--dark-blue-bgd);
+    border-radius: 2px;
+    
+}
 .header-link:hover,
 .header-link:focus {
     color: var(--dark-blue-bgd);
@@ -128,6 +145,9 @@ img {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--main-dark-cl);
+    transition-property: color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contact:hover,
@@ -185,6 +205,9 @@ img {
     border-radius: 4px;
     padding: 16px 32px;
     align-items: center;
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -201,6 +224,8 @@ img {
 }
 
 .benefits-list {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-around;
     gap: 24px;
@@ -223,6 +248,15 @@ img {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
+}
+.benefits-icon {
+    width: 264px;
+    background-color: var(--simple-white-cl);
+    border-radius: 4px;
+    justify-content: center;
+    align-items: center;
+
+    
 }
 
 /* Tech section */
@@ -311,14 +345,55 @@ img {
     text-align: center;
     letter-spacing: 0.02em;
     text-align: center;
+    margin-bottom: 8px;
 }
 .card-name {
     padding: 32px 16px;
 }
+.networks-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+
+.networks-item {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    fill: var(--lights-late-cl);
+    background-color: var(--bright-blue-cl);
+}
+
+.networks-link {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.networks-icon {
+    display: block;
+    margin: 0 auto;
+}
 
 /* Clients*/
 
-
+.clients-container {
+    padding: 120px 0;
+}
+.clients-title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    color: var(--dark-title-cl);
+    margin-bottom: 72px;
+}
 .clients-list {
     display: flex;
     justify-content: center;
@@ -329,6 +404,7 @@ img {
 }
 
 .clients-link {
+    color: var(--lights-late-cl);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -336,6 +412,12 @@ img {
     border: 1px solid var(--lights-late-cl);
     width: 168px;
     height: 88px;
+    transition-property: border-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.clients-icon {
+    fill: currentColor;
 }
 .clients-link:hover {
     border-color: var(--dark-blue-bgd);
@@ -353,6 +435,10 @@ img {
     padding-bottom: 100px;
 }
 
+.footer-container {
+    display: flex;
+
+}
 .footer-logo {
     font-family: 'Raleway', sans-serif;
     font-weight: 800;
@@ -379,6 +465,43 @@ img {
     color: var(--simple-white-cl);
     max-width: 264px;
 }
+
+.footer-list {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 16px;
+}
+.social-title {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    color: var(--main-white-bgd);
+    margin-bottom: 16px;
+}
+
+.footer-item {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    fill: var(--lights-late-cl);
+    background-color: var(--bright-blue-cl);
+    }
+
+
+.footer-link {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-icon {
+}
+
 /* App search */
 
 .app {
@@ -415,6 +538,9 @@ img {
     padding: 12px 24px;
     border: 1px solid var(--border-white-cl);
     border-radius: 4px;
+    transition-property: color, background-color, box-shadow;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .search-btn:hover,
 .search-btn:focus {
@@ -460,4 +586,80 @@ img {
     letter-spacing: 0.02em;
     color: var(--main-dark-cl);
 }
+/* Overlay */
+.wrapper {
+    position: relative;
+    overflow: hidden;
+    
+}
 
+.app-img {}
+
+.overlay {
+    position: absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    color: var(--simple-white-cl);
+    background: var(--bright-blue-cl);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    padding: 40px 32px 164px;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
+}
+.app-item:hover .overlay {
+    transform: translateY(0);
+}
+
+/* Modal styles */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--navyblue-modal);
+}
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left :50%;
+    width: 408px;
+    height: 584px;
+    flex-shrink: 0;
+    border-radius: 4px;
+    background: var(--dairy);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+    transform: translateX(-50%) translateY(-50%);
+}
+.modal-btn{
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    cursor: pointer;
+    border-radius: 24px;
+    border: 1px solid rgba(0, 0, 0, 0.10);
+    background: var(--border-white-cl);
+}
+
+.modal-icon {
+    stroke: var(--dark-title-cl);
+}
