--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,8 @@
     --simple-white-cl: #F4F4FD;
     --border-white-cl: #e7e9fc;
     --lights-late-cl: #8E8F99;
-    --navyblue-modal: rgba(46, 47, 66, 0.40);
-    --dairy: #FCFCFC;
+    --networks-cl: #31d0aa;
+    --modal-bdg: #fcfcfc;
   
 }
 
@@ -67,6 +67,7 @@ img {
 .header {
     font-style: normal;
     border-bottom: 1px solid var(--border-white-cl);
+    box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .header-container {
     display: flex;
@@ -116,7 +117,7 @@ img {
 .header-link.active::after {
     content: "";
     position: absolute;
-    bottom: -4px;
+    bottom: -1px;
     left: 0;
     display: block;
     width: 100%;
@@ -249,14 +250,18 @@ img {
     font-size: 16px;
     line-height: 1.5;
 }
-.benefits-icon {
-    width: 264px;
-    background-color: var(--simple-white-cl);
-    border-radius: 4px;
+.benefits-icon {  
+    width: 64px;
+    height: 64px;
+}
+.block {
+    display: flex;
     justify-content: center;
     align-items: center;
-
-    
+    height: 112px;
+    background-color: var(--simple-white-cl);
+    border-radius: 4px;
+    margin-bottom: 8px;
 }
 
 /* Tech section */
@@ -321,6 +326,7 @@ img {
 .team-item {
     background-color: var(--main-white-bgd);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .team-img {
@@ -348,7 +354,7 @@ img {
     margin-bottom: 8px;
 }
 .card-name {
-    padding: 32px 16px;
+    padding: 32px 0px;
 }
 .networks-list {
     display: flex;
@@ -360,9 +366,8 @@ img {
 .networks-item {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
-    fill: var(--lights-late-cl);
-    background-color: var(--bright-blue-cl);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .networks-link {
@@ -371,17 +376,22 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+    background-color: var(--bright-blue-cl);
+    border-radius: 50%;
 }
 
 .networks-icon {
     display: block;
     margin: 0 auto;
+    fill: var(--simple-white-cl)
 }
-
+.networks-link:hover,
+.networks-link:focus {
+    background-color: var(--dark-blue-bgd)
+}
 /* Clients*/
 
-.clients-container {
+.clients-section {
     padding: 120px 0;
 }
 .clients-title {
@@ -401,6 +411,9 @@ img {
 }
 
 .clients-item {
+    width: calc((100% - 120px) / 6);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),bn color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .clients-link {
@@ -421,10 +434,13 @@ img {
 }
 .clients-link:hover {
     border-color: var(--dark-blue-bgd);
+    color: var(--dark-blue-bgd);
 }
 
-.clients-link:hover .clients-icon {
-    fill: var(--dark-blue-bgd)
+.clients-link:focus {
+    border-color: var(--dark-blue-bgd);
+    color: var(--dark-blue-bgd);
+
 }
 
 /* Footer section */
@@ -437,6 +453,8 @@ img {
 
 .footer-container {
     display: flex;
+    align-items: baseline;
+    margin-right: 120px;
 
 }
 .footer-logo {
@@ -472,22 +490,21 @@ img {
     align-items: center;
     gap: 16px;
 }
-.social-title {
+.social-text {
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.32px;
+    line-height: 1.5px;
+    letter-spacing: 0.02em;
     color: var(--main-white-bgd);
-    margin-bottom: 16px;
+    margin-bottom: 16px; 
 }
 
 .footer-item {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    fill: var(--lights-late-cl);
-    background-color: var(--bright-blue-cl);
-    }
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 
 .footer-link {
@@ -497,9 +514,15 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: var(--bright-blue-cl)
 }
 
 .footer-icon {
+    fill: var(--simple-white-cl)
+}
+.footer-link:hover,
+.footer-link:focus {
+    background-color: var(--networks-cl);
 }
 
 /* App search */
@@ -624,7 +647,8 @@ img {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: var(--navyblue-modal);
+    background-color:rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
     opacity: 0;
@@ -637,12 +661,14 @@ img {
     top: 50%;
     left :50%;
     width: 408px;
-    height: 584px;
+    min-height: 584px;
     flex-shrink: 0;
     border-radius: 4px;
-    background: var(--dairy);
+    background-color: var(--modal-bdg);
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
     transform: translateX(-50%) translateY(-50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 .modal-btn{
     position: absolute;
@@ -655,11 +681,21 @@ img {
     height: 24px;
     padding: 0;
     cursor: pointer;
-    border-radius: 24px;
+    border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.10);
-    background: var(--border-white-cl);
+    background-color: var(--border-white-cl);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.modal-btn:hover,
+.modal-btn:focus {
+    background-color: var(--dark-blue-bgd);
+    border: none;
+}
+.modal-btn:hover,
+.modal-btn:focus {
+    fill: var(--main-white-bgd);
+}
 .modal-icon {
     stroke: var(--dark-title-cl);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
