--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,7 @@ img {
     height: 4px;
     background-color: var(--dark-blue-bgd);
     border-radius: 2px;
+    color: var(--dark-blue-bgd);
     
 }
 .header-link:hover,
@@ -366,8 +367,6 @@ img {
 .networks-item {
     width: 40px;
     height: 40px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
 }
 
 .networks-link {
@@ -378,6 +377,7 @@ img {
     justify-content: center;
     background-color: var(--bright-blue-cl);
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .networks-icon {
@@ -412,7 +412,7 @@ img {
 
 .clients-item {
     width: calc((100% - 120px) / 6);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),bn color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 
 }
 
@@ -425,9 +425,7 @@ img {
     border: 1px solid var(--lights-late-cl);
     width: 168px;
     height: 88px;
-    transition-property: border-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), bn color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-icon {
     fill: currentColor;
@@ -454,8 +452,10 @@ img {
 .footer-container {
     display: flex;
     align-items: baseline;
-    margin-right: 120px;
-
+    margin-right: 120px; 
+}
+.logo-container {
+    margin-right: 120px
 }
 .footer-logo {
     font-family: 'Raleway', sans-serif;
@@ -493,7 +493,7 @@ img {
 .social-text {
     font-size: 16px;
     font-weight: 500;
-    line-height: 1.5px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--main-white-bgd);
     margin-bottom: 16px; 
@@ -503,7 +503,6 @@ img {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -514,7 +513,8 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--bright-blue-cl)
+    background-color: var(--bright-blue-cl);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-icon {
@@ -561,7 +561,7 @@ img {
     padding: 12px 24px;
     border: 1px solid var(--border-white-cl);
     border-radius: 4px;
-    transition-property: color, background-color, box-shadow;
+    transition-property: color, background-color, border, border-radius;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
