--- a/css/styles.css
+++ b/css/styles.css
@@ -124,8 +124,10 @@ img {
     height: 4px;
     background-color: var(--dark-blue-bgd);
     border-radius: 2px;
+      
+}
+.header-link.active::after {
     color: var(--dark-blue-bgd);
-    
 }
 .header-link:hover,
 .header-link:focus {
@@ -425,7 +427,7 @@ img {
     border: 1px solid var(--lights-late-cl);
     width: 168px;
     height: 88px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), bn color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-icon {
     fill: currentColor;
