--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,6 @@ body {
     font-family: "Roboto", sans-serif;
     color: var(--main-dark-cl);
     background-color: var(--main-white-bgd);
-
-
     font-size: 16px;
     line-height: 1.5;
 }
@@ -658,6 +656,7 @@ img {
 }
 
 .modal {
+    padding: 72px 24px 24px;
     position: absolute;
     top: 50%;
     left :50%;
@@ -699,4 +698,43 @@ img {
 .modal-icon {
     stroke: var(--dark-title-cl);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-caption {
+    display: block;
+    width: 360px;
+    margin-bottom: 16px;;
+    color: var(--dark-title-cl);
+    text-align: center;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+}
+
+.modal-form {
+    
+}
+
+.modal-form-field {
+    display: block;
+    margin-bottom: 8px;
+}
+
+.modal-form-label {
+    display: block;
+    margin-bottom: 4px;
+    color: var(--lights-late-cl);
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.1;
+    letter-spacing: 0.48px;
+}
+
+.modal-form-input {
+    width: 100%;
+    height: 40px;
+    outline: transparent;
+    border-radius: 4px;
+    border: 1px solid rgba(46, 47, 66, 0.40);
 }
